# ai-rpg

./: .coverage  .coveragerc  .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  routes.py
app/api/: __init__.py  routes.py
app/models/: character.py  combat.py  game_session.py  npc.py
app/services/: ai_service.py  character_service.py  game_master.py  game_state_service.py  memory_graph.py  memory_service.py  structure.md
app/static/css/: style.css
app/static/js/: main.js
app/templates/: base.html  character_sheet.html  debug.html  game.html  index.html  memory_debug.html  new_character.html  sessions.html
tests/: README.md  conftest.py  pytest.ini
tests/functional/routes/: test_game_routes.py
tests/integration/services/: test_game_flow.py
tests/mocks/: openai_responses.py
tests/unit/models/: test_character.py  test_combat.py  test_game_session.py  test_npc.py
tests/unit/services/: test_character_service.py  test_game_master.py
