[project]
name = "rpg"
version = "0.1.0"
description = "A web-based role-playing game with an AI-powered Game Master"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "flask==2.3.3",
    "flask-cors==4.0.0",
    "openai>=1.1.0",  # Updated for newer API features
    "python-dotenv==1.0.0",
    "sqlalchemy==2.0.20",
    "gunicorn==21.2.0",
    "pydantic==2.3.0",
    "requests==2.31.0",
    "numpy>=1.24.0",  # For embeddings and vector operations
    "scikit-learn>=1.2.0",  # For cosine similarity calculations
    "pandas>=2.0.0",  # For data handling
    "matplotlib>=3.7.0",  # For visualization in debug views
    "flask-markdown>=0.3.0",  # For Markdown formatting in templates
    "ruff>=0.1.5",  # Python linter
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "pytest-flask>=1.2.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.10.0",
    "black>=23.3.0",
    "isort>=5.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
# uv-specific configurations can go here

[tool.ruff]
# Enable Pyflakes ('F'), pycodestyle ('E'), and import ('I') rules
select = ["E", "F", "I", "W", "B", "C90"]
ignore = []

# Allow autofix for all enabled rules (when `--fix` is passed)
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []

# Exclude a variety of commonly ignored directories
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black
line-length = 88

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Target Python 3.8+
target-version = "py38"
